force-app/main/default/objects/children__c/children__c.object-meta.xml
<CustomObject>
    <label>children</label>
    <nameField>
        <label>children Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>childrens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>