force-app/main/default/objects/children__c/fields/child_aadhar_number__c.field-meta.xml
<CustomField>
    <fullName>child_aadhar_number__c</fullName>
    <label>child aadhar number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>