force-app/main/default/objects/children__c/fields/Father__c.field-meta.xml
<CustomField>
    <fullName>Father__c</fullName>
    <label>Father</label>
    <referenceTo>Father__c</referenceTo>
    <relationshipLabel>childrens</relationshipLabel>
    <relationshipName>childrens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>