force-app/main/default/objects/children__c/fields/Mother__c.field-meta.xml
<CustomField>
    <fullName>Mother__c</fullName>
    <label>Mother</label>
    <referenceTo>Mother__c</referenceTo>
    <relationshipLabel>childrens</relationshipLabel>
    <relationshipName>childrens</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>